--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,15 +14,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-01-01 Mon 09:51]
+#+CAPTION: Clock summary at [2018-01-03 Wed 16:09]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:11* |      |      | 100.0 |
+| *Total time*                                                                | *8:18* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:11   |      |      | 100.0 |
-| Active                                                                      |        | 0:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 | 100.0 |
+| Stories                                                                     | 8:18   |      |      | 100.0 |
+| Active                                                                      |        | 8:18 |      | 100.0 |
+| STARTED Edit release notes for previous sprint                              |        |      | 4:32 |  54.6 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   2.2 |
+| COMPLETED Write a blog post on previous sprint                              |        |      | 3:35 |  43.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -38,7 +40,7 @@ Title: Dogen v1.0.07, "Mercado"
 #+begin_src markdown
 ![Mercado](http://static.panoramio.com/photos/large/8148799.jpg) _Mercado Municipal, Namibe, Angola. (C) Edwin Mello, 2008._
 
-# TL; DR
+# Overview
 
 The bulk of the work this sprint was yet again spent on
 refactoring. Many a lesson was learned, as described in the brand new
@@ -76,6 +78,14 @@ For all other architectures and/or operative systems, you will need to build Dog
     CLOCK: [2018-01-01 Mon 09:40]--[2018-01-01 Mon 09:51] =>  0:11
 
 Updates to sprint and product backlog.
+
+*** COMPLETED Write a blog post on previous sprint                    :story:
+    CLOSED: [2018-01-03 Wed 16:09]
+    CLOCK: [2018-01-03 Wed 14:13]--[2018-01-03 Wed 16:09] =>  1:56
+    CLOCK: [2018-01-03 Wed 14:01]--[2018-01-03 Wed 14:12] =>  0:11
+    CLOCK: [2018-01-03 Wed 12:01]--[2018-01-03 Wed 13:29] =>  1:28
+
+Do a quick write-up on the difficulties of the previous sprint.
 
 *** Finish setting up coveralls                                       :story:
 
