--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,17 +14,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-01-03 Wed 16:09]
+#+CAPTION: Clock summary at [2018-01-03 Wed 16:20]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:18* |      |      | 100.0 |
+| *Total time*                                                                | *8:28* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:18   |      |      | 100.0 |
-| Active                                                                      |        | 8:18 |      | 100.0 |
-| STARTED Edit release notes for previous sprint                              |        |      | 4:32 |  54.6 |
+| Stories                                                                     | 8:28   |      |      | 100.0 |
+| Active                                                                      |        | 8:28 |      | 100.0 |
+| STARTED Edit release notes for previous sprint                              |        |      | 4:32 |  53.5 |
 | STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   2.2 |
-| COMPLETED Write a blog post on previous sprint                              |        |      | 3:35 |  43.2 |
+| COMPLETED Write a blog post on previous sprint                              |        |      | 3:35 |  42.3 |
+| COMPLETED Update Readme with links to blog posts                            |        |      | 0:10 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -86,6 +87,13 @@ Updates to sprint and product backlog.
     CLOCK: [2018-01-03 Wed 12:01]--[2018-01-03 Wed 13:29] =>  1:28
 
 Do a quick write-up on the difficulties of the previous sprint.
+
+*** COMPLETED Update Readme with links to blog posts                  :story:
+    CLOSED: [2018-01-03 Wed 16:20]
+    CLOCK: [2018-01-03 Wed 16:10]--[2018-01-03 Wed 16:20] =>  0:10
+
+Given we have a number of blog posts inspired by work on Dogen, we
+should add links to them on the main readme.
 
 *** Finish setting up coveralls                                       :story:
 
