--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -150,6 +150,110 @@ Problems:
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
 
+*** Rename stereotypes                                                :story:
+
+It makes more sense to create a dogen-wide UML profile rather than one
+just specific to yarn/modeling. This means renaming all stereotypes to
+dogen, i.e.: =yarn::object_template= becomes =dogen::object_template=
+and so forth. Modeling/yarn is just one of the possible
+implementations of the profile.
+
+*** Add support for proper JSON serialisation in C++                  :story:
+
+We need to add support for JSON in C++. It will eventually have to
+roundtrip to JSON in C# but that will be handled as two separate
+stories.
+
+Libraries:
+
+- One option is [[https://github.com/cierelabs/json_spirit][json_spirit]].
+- Another option is [[https://github.com/miloyip/rapidjson][RapidJson]].
+- Actually there is a project comparing JSON libraries: [[https://github.com/miloyip/nativejson-benchmark][nativejson-benchmark]]
+- One interesting library is [[https://github.com/dropbox/json11][Json11]].
+
+When we implement this we should provide support for JSON with
+roundtripping tests.
+
+We will not replace the current IO implementation; it should continue
+to exist as is, requiring no external dependencies.
+
+We should consider supporting multiple JSON libraries: instead of
+making the mistake we did with serialisation where we bound the name
+=serialization= with boost serialisation, we should call it by its
+real name, e.g. =json_spirit= etc. Then when a user creates a
+stereotype for a profile such as =Serializable= it can choose which
+serialisation codecs to enable for which language. This means that the
+same stereotypes can have different meanings in different
+architectures, which is the desired behaviour.
+
+We should create a serialise / deserialise functions following the
+same logic as boost:
+
+#+begin_src c++
+void serialize(Value& v, const object& o);
+void serialize(Value& v, const base& b);
+
+void deserialize(const Value& v, object& o);
+base* deserialize(const Value& v);
+#+end_src
+
+Or perhaps even better, we can make the above the internal methods and
+use =operator<<= and =operator>>= as the external methods:
+
+#+begin_src c++
+void operator<<(Value& v, const object& o);
+void operator>>(const Value& v, object& o);
+#+end_src
+
+Notes:
+
+- create a registrar with a map for each base type. The function
+  returns a base type pointer.
+- when you deserialize a base type pointer, you call the pointer
+  deserialize above. Same for when you have a pointer to an object. It
+  will internally call the registrar (if its a base type) and get the
+  right function.
+- this means we only need to look at type for inheritance. Although we
+  should probably always do it for validation? However, what happens
+  if we want to make a model so we can read external JSON? It won't
+  contain type markings.
+- =operator>>= will not be defined for pointers or base classes.
+- this wont work for the case of =doc << base=. For this we need a map
+  that looks up on type_index.
+
+Merged stories:
+
+For the previous attempt to integrate RapidJson see this commit:
+
+b2cce41 * third party: remove includes and rapid json
+
+*Add support for JSON serialisation*
+
+We should have proper JSON serialisation support, for both reading and
+writing. We can then implement IO in terms of JSON.
+
+*Raw JSON vs cooked JSON*
+
+If we do implement customisable JSON serialisation, we should still
+use the raw format in streaming. We need a way to disable the cooked
+JSON internally. We should also re-implement streaming in terms of
+this JSON mode.
+
+
+*** Fix typo in ODB error message                                     :story:
+
+Spelt =FATAL= instead of =FATAL_ERROR= in ODB makefile:
+
+: if (NOT ODB_EXECUTABLE)
+:    message(FATAL_ERROR "ODB Executable not defined.")
+: endif()
+
+*** Dogen does not generate ODB targets for primitives                :story:
+
+At present the northwind model does not have any targets to generate
+primitives, causing the northwind model build to fail when ODB is
+enabled.
+
 *** Build dogen from docker                                           :story:
 
 - fix references to gcc6 etc
@@ -287,14 +391,6 @@ build time. Things to try:
 Create a model with the top-level transforms.
 
 *** Clean up UML profiles and meta-data                               :story:
-
-It makes more sense to create a dogen-wide UML profile rather than one
-just specific to yarn/modeling. This means renaming all stereotypes to
-dogen, i.e.: =yarn::object_template= becomes =dogen::object_template=
-and so forth. Modeling/yarn is just one of the possible
-implementations of the profile.
-
-Notes:
 
 - we should wait until we rename =quilt= too so we can clean up the
   quilt meta-data at the same time.
