--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,19 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-01-05 Fri 16:01]
+#+CAPTION: Clock summary at [2018-02-25 Sun 17:58]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:40* |       |      | 100.0 |
+| *Total time*                                                                | *12:15* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:40   |       |      | 100.0 |
-| Active                                                                      |         | 11:40 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  42.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.6 |
-| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  30.7 |
+| Stories                                                                     | 12:15   |       |      | 100.0 |
+| Active                                                                      |         | 12:15 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  40.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.5 |
+| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  29.3 |
 | COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.4 |
-| STARTED Create the =generation= model                                       |         |       | 2:49 |  24.1 |
+| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.8 |
+| STARTED Create the =generation= model                                       |         |       | 2:49 |  23.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -97,6 +98,16 @@ Do a quick write-up on the difficulties of the previous sprint.
 Given we have a number of blog posts inspired by work on Dogen, we
 should add links to them on the main readme.
 
+*** COMPLETED Rename stereotypes                                      :story:
+    CLOSED: [2018-02-25 Sun 17:57]
+    CLOCK: [2018-02-25 Sun 17:20]--[2018-02-25 Sun 17:55] =>  0:35
+
+It makes more sense to create a dogen-wide UML profile rather than one
+just specific to yarn/modeling. This means renaming all stereotypes to
+dogen, i.e.: =yarn::object_template= becomes =dogen::object_template=
+and so forth. Modeling/yarn is just one of the possible
+implementations of the profile.
+
 *** STARTED Create the =generation= model                             :story:
     CLOCK: [2018-01-05 Fri 15:48]--[2018-01-05 Fri 16:01] =>  0:13
     CLOCK: [2018-01-05 Fri 15:44]--[2018-01-05 Fri 15:47] =>  0:03
@@ -149,14 +160,6 @@ Problems:
   class =opaque_properties= and then have a container of these in
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
-
-*** Rename stereotypes                                                :story:
-
-It makes more sense to create a dogen-wide UML profile rather than one
-just specific to yarn/modeling. This means renaming all stereotypes to
-dogen, i.e.: =yarn::object_template= becomes =dogen::object_template=
-and so forth. Modeling/yarn is just one of the possible
-implementations of the profile.
 
 *** Add support for proper JSON serialisation in C++                  :story:
 
@@ -238,7 +241,6 @@ If we do implement customisable JSON serialisation, we should still
 use the raw format in streaming. We need a way to disable the cooked
 JSON internally. We should also re-implement streaming in terms of
 this JSON mode.
-
 
 *** Fix typo in ODB error message                                     :story:
 
