--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,20 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-02-25 Sun 17:58]
+#+CAPTION: Clock summary at [2018-02-25 Sun 18:16]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:15* |       |      | 100.0 |
+| *Total time*                                                                | *12:36* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:15   |       |      | 100.0 |
-| Active                                                                      |         | 12:15 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  40.1 |
+| Stories                                                                     | 12:36   |       |      | 100.0 |
+| Active                                                                      |         | 12:36 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  39.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.5 |
-| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  29.3 |
-| COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.4 |
-| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.8 |
-| STARTED Create the =generation= model                                       |         |       | 2:49 |  23.0 |
+| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  28.4 |
+| COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.3 |
+| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.6 |
+| STARTED Create the =generation= model                                       |         |       | 2:49 |  22.4 |
+| STARTED Dogen does not generate ODB targets for primitives                  |         |       | 0:21 |   2.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -161,6 +162,13 @@ Problems:
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
 
+*** STARTED Dogen does not generate ODB targets for primitives        :story:
+    CLOCK: [2018-02-25 Sun 17:55]--[2018-02-25 Sun 18:16] =>  0:21
+
+At present the northwind model does not have any targets to generate
+primitives, causing the northwind model build to fail when ODB is
+enabled.
+
 *** Add support for proper JSON serialisation in C++                  :story:
 
 We need to add support for JSON in C++. It will eventually have to
@@ -249,12 +257,6 @@ Spelt =FATAL= instead of =FATAL_ERROR= in ODB makefile:
 : if (NOT ODB_EXECUTABLE)
 :    message(FATAL_ERROR "ODB Executable not defined.")
 : endif()
-
-*** Dogen does not generate ODB targets for primitives                :story:
-
-At present the northwind model does not have any targets to generate
-primitives, causing the northwind model build to fail when ODB is
-enabled.
 
 *** Build dogen from docker                                           :story:
 
