--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-02-25 Sun 18:16]
+#+CAPTION: Clock summary at [2018-02-25 Sun 18:32]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:36* |       |      | 100.0 |
+| *Total time*                                                                | *12:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:36   |       |      | 100.0 |
-| Active                                                                      |         | 12:36 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  39.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.5 |
-| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  28.4 |
+| Stories                                                                     | 12:51   |       |      | 100.0 |
+| Active                                                                      |         | 12:51 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  38.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.4 |
+| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  27.9 |
 | COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.3 |
-| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.6 |
-| STARTED Create the =generation= model                                       |         |       | 2:49 |  22.4 |
-| STARTED Dogen does not generate ODB targets for primitives                  |         |       | 0:21 |   2.8 |
+| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.5 |
+| STARTED Create the =generation= model                                       |         |       | 2:49 |  21.9 |
+| STARTED Dogen does not generate ODB targets for primitives                  |         |       | 0:36 |   4.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -163,6 +163,7 @@ Problems:
   make it a unordered set of pointers.
 
 *** STARTED Dogen does not generate ODB targets for primitives        :story:
+    CLOCK: [2018-02-25 Sun 18:17]--[2018-02-25 Sun 18:32] =>  0:15
     CLOCK: [2018-02-25 Sun 17:55]--[2018-02-25 Sun 18:16] =>  0:21
 
 At present the northwind model does not have any targets to generate
