--- a/doc/presentations/variability_in_transformations.tex
+++ b/doc/presentations/variability_in_transformations.tex
@@ -57,19 +57,19 @@ v${DOGEN_VERSION}
   the model-driven reverse engineering of a legacy
   system.)''\cite{brambilla2012model}
 
+\pause
+
+\item ``Fundamental'' \ac{MDE} equation: Models + Transformations =
+  Software
+
 \end{itemize}
 
 \end{frame}
 
 \begin{frame}
-\frametitle{\ac{MDE} Key Components}
+\frametitle{\ac{MDE} Key Components: Models}
 
 \begin{itemize}
-
-\item ``Fundamental'' \ac{MDE} equation: Models + Transformations =
-  Software
-
-\pause
 
 \item \ac{MDE} is only interested in a special class of models: those
   which are described according to a \textbf{formal language} and thus
@@ -82,35 +82,35 @@ v${DOGEN_VERSION}
   a \ac{DSL}. \ac{UML} has a graphical representation~--- called a
   \emph{concrete syntax}, but also an \emph{abstract syntax}.
 
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{\ac{MDE} Key Components}
-
-\begin{itemize}
+\pause
 
 \item A \emph{meta-model} is made up of the abstract syntax and the
   static semantics of the \ac{DSL}. The metamodel is the basis for the
   transformations.
 
-\pause
+\end{itemize}
 
+\end{frame}
+
+\begin{frame}
+\frametitle{\ac{MDE} Key Components: Transforms}
+
+\begin{itemize}
 \item \emph{Transformations}~--- or just transforms~--- can be thought
   of as functions that take models as inputs and produce an output.
 
 \pause
 
-\item The output of a transform can be another model; it can either
-  \emph{conform} to the same metamodel or to a different metamodel. In
-  this case we classify the transform as \ac{M2M}.
+\item The output of a transform can be another model; in this case we
+  classify the transform as \acf{M2M}. The output model can either
+  \emph{conform} to the same metamodel or to a different metamodel.
 
 \pause
 
 \item The output of the transform can also be text; in this case we
-  classify the transform as \ac{M2T}. These are commonly referred to
-  as \emph{generators}.
+  classify the transform as \acf{M2T}. These transforms are commonly
+  referred to as \emph{generators} because they are a generalisation
+  of the notion \emph{code generators}.
 
 \end{itemize}
 
@@ -132,7 +132,7 @@ v${DOGEN_VERSION}
 \item Once you have a product, the next logical think is to think of
   \emph{product families}: ``the set of all products that can be
   created with a certain domain architecture is commonly referred to
-  as a \emph{software system family}.''''\cite{volter2013model}
+  as a \emph{software system family}.''\cite{volter2013model}
 
 \pause
 
@@ -150,12 +150,63 @@ v${DOGEN_VERSION}
 
 \begin{itemize}
 
-\item \ac{PLE} integrates with \ac{MDE} seamlessly:
+\item ``The main idea of software product lines is to design a family
+  of systems instead of one single system. A family of systems defines
+  a set of systems that share substantial commonalities but also
+  exhibit explicit variations.''\cite{brambilla2012model}
 
 \pause
 
+\item In theory, \ac{PLE} integrates well with \ac{MDE}: it provides
+  an analytical framework with which to model the domain looking for
+  variations.
+
+\pause
+
+\item If all went according to plan, we should be able to ``simply''
+  supply additional inputs to our models; these then determine the
+  \emph{concrete} product we want to produce from the universe of
+  \emph{possible} products supported by our models. The key here is
+  \emph{variability} and how to express it.
 
 \end{itemize}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Software Product Lines: Variability}
+
+\begin{itemize}
+
+\item ``Variability management is the activity concerned with
+  identifying, designing, implementing, and tracing flexibility in
+  software product lines (SPLs).''
+
+\pause
+
+\item In practice, there are problems integrating \ac{MDE} with
+  \ac{PLE}: ``One of the most interesting question [sic] when it comes
+  to software product lines and model driven engineering is how to
+  formulate the knowledge of a software product line by using
+  models. Especially, the variability aspect is in this context of
+  main interest as modeling languages are quite often lacking
+  variability as a first-class language
+  concept.''\cite{brambilla2012model}
+
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Software Product Lines: Variability}
+
+Variability has been around for a long time, in various guises.
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.6]{images/variability_spectrum_voelter.png}
+  \caption{Expressive power of \ac{DSL}s.\cite{groher2007expressing}}
+\end{figure}
 
 \end{frame}
 
