presentations: rename variability presentation

--- a/doc/presentations/variability_and_transformations.tex
+++ b/doc/presentations/variability_and_transformations.tex
@@ -12,7 +12,7 @@
 \newcommand{\eg}{\textit{e}.\textit{g}. }
 \newcommand{\etc}{\textit{etc}. }
 
-\title{Variability in Transformations}
+\title{Variability and Transformations}
 \author{Marco Craveiro}
 \date{\today}
 
@@ -24,7 +24,7 @@
   \end{frame}
 }
 
-\bibliography{variability_in_transformations}
+\bibliography{variability_and_transformations}
 
 \begin{document}
 
@@ -39,8 +39,8 @@ v${DOGEN_VERSION}
 \frametitle{What is \ac{MDE}}
 
 \begin{itemize}
-\item Previous presentation provided an overview of what \ac{MDE} is
-  and why you should consider it for Software Engineering.
+\item The previous presentation provided an overview of what \ac{MDE}
+  is and why you should consider it for Software Engineering.
 
 \pause
 
