--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,21 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-02-25 Sun 18:40]
+#+CAPTION: Clock summary at [2018-03-02 Fri 12:07]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:51* |       |      | 100.0 |
+| *Total time*                                                                | *15:46* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:51   |       |      | 100.0 |
-| Active                                                                      |         | 12:51 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  38.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.4 |
-| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  27.9 |
-| COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.3 |
-| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   4.5 |
-| COMPLETED Dogen does not generate ODB targets for primitives                |         |       | 0:36 |   4.7 |
-| STARTED Create the =generation= model                                       |         |       | 2:49 |  21.9 |
+| Stories                                                                     | 15:46   |       |      | 100.0 |
+| Active                                                                      |         | 15:46 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 4:55 |  31.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.2 |
+| COMPLETED Write a blog post on previous sprint                              |         |       | 3:35 |  22.7 |
+| COMPLETED Update Readme with links to blog posts                            |         |       | 0:10 |   1.1 |
+| COMPLETED Rename stereotypes                                                |         |       | 0:35 |   3.7 |
+| COMPLETED Dogen does not generate ODB targets for primitives                |         |       | 0:36 |   3.8 |
+| STARTED Create the =generation= model                                       |         |       | 2:49 |  17.9 |
+| STARTED Create a presentation on variability                                |         |       | 2:55 |  18.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -170,6 +171,11 @@ Problems:
   class =opaque_properties= and then have a container of these in
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
+
+*** STARTED Create a presentation on variability                      :story:
+    CLOCK: [2018-03-02 Fri 09:11]--[2018-03-02 Fri 12:06] =>  2:55
+
+We need to do a presentation on how variability is linked to MDE.
 
 *** Propagate =fluent= stereotype                                     :story:
 
