presentations: more work on variability

--- a/doc/presentations/variability_and_transformations.bib
+++ b/doc/presentations/variability_and_transformations.bib
@@ -37,7 +37,7 @@
 
 @inproceedings{groher2007expressing,
   title={Expressing feature-based variability in structural models},
-  author={Groher, Iris and Voelter, Markus},
+  author={Groher, Iris and V{\"o}lter, Markus},
   booktitle={In Workshop on Managing Variability for Software Product Lines},
   year={2007},
   organization={Citeseer}
